<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/dialogAdd"
    android:background="@drawable/custom_rim"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_gravity="center">


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edTitle"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="31dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dialog"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="71dp"/>

    <EditText
        android:id="@+id/edTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_rim"
        android:hint="@string/title_tin"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/link"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="164dp"/>

    <EditText
        android:id="@+id/edLink"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_rim"
        android:hint="@string/link_tin"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btnCancel"
        android:layout_width="132.24dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edLink"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="132.24dp"
        android:layout_height="40dp"
        android:layout_below="@+id/edLink"
        android:layout_marginStart="-142dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/edLink"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/button"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="14sp" />
</RelativeLayout>